fix(deeisgn): bit better on mobile

--- a/src/main.scss
+++ b/src/main.scss
@@ -202,13 +202,11 @@ h1 {
 .recommendation__person {
   position: relative;
   font-size: 1.8rem;
-  line-height: 1.3;
 }
 
 .recommendation__title {
   font-weight: normal;
   color: var(--c-brand);
-  margin-top: 0.3em;
   font-size: 1.4rem;
 }
 
